--- a/app/src/main/res/layout/fragment_display_mnemonic.xml
+++ b/app/src/main/res/layout/fragment_display_mnemonic.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="24dp"
             android:gravity="center"
             android:lines="4"
-
+            android:textColor="@color/app_secondary_text"
             android:paddingStart="40dp"
             android:paddingEnd="40dp"
             android:text="@string/imp_secret_phrase_msg"
@@ -35,19 +35,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/secret_phrase_message" />
+            app:layout_constraintTop_toBottomOf="@+id/secret_phrase_message"
+            android:stretchColumns="*"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="8dp"/>
 
 
         <Button
             android:id="@+id/btn_display_mnemonic_next"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="40dp"
-            android:backgroundTint="@color/secondary_color"
+            android:layout_marginEnd="32dp"
+            android:backgroundTint="@color/app_blue"
             android:text="Next"
-            android:textColor="@color/app_primary_text_color"
+            android:textColor="@color/app_primary_text"
             app:cornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
