--- a/app/src/main/res/layout/fragment_wallet_setup.xml
+++ b/app/src/main/res/layout/fragment_wallet_setup.xml
@@ -14,9 +14,9 @@
             android:id="@+id/setup_new_wallet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/secondary_color"
+            android:backgroundTint="@color/app_blue"
             android:text="@string/btn_setup_new_wallet"
-            android:textColor="@color/app_primary_text_color"
+            android:textColor="@color/app_primary_text"
             android:textSize="16sp"
             app:cornerRadius="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
