--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="secondary_color">#3C98E3</color>
-    <color name="app_primary_text_color">#EAF0F4</color>
-    <color name="app_label_text_color">#6F7D8B</color>
-    <color name="app_border_color">#35474F</color>
+    <color name="app_blue">#3C98E3</color>
+    <color name="app_primary_text">#EAF0F4</color>
+    <color name="app_secondary_text">#6F7D8B</color>
+    <color name="app_dark_secondary">#35474F</color>
+    <color name="app_transparent_white">#33FFFFFF</color>
 </resources>
